fixed the divider and collapsed border issues

--- a/css/index.css
+++ b/css/index.css
@@ -19,10 +19,14 @@ p {
     width: 960px;
     margin: 0 auto;
     padding: 2em;
+    margin-top: 5em;
+    margin-bottom: 5em;
+
     border-radius: 10px;
     box-shadow: 0 0 20px #67140b;
-    margin-top: 4em;
+   
     background-color: white;
+
     overflow: auto;
 }
 
@@ -208,7 +212,6 @@ hr:before {
     box-shadow: 0 0 10px #f5f5dc;
     width: 100%;
     margin: 0 auto;
-    margin-top: 50px;
 }
 /* Page divider with HR ======================*/
 
